@@ -12,6 +12,10 @@ on user-visible changes.
 
 == Repository head ==
 
+It is now possible to unpeer refclocks using a type/unit specification
+rather than a magic IP address.  This was the last obligatory use of
+magic IP addresses in the configuration grammar.
+
 == 2017-10-10: 1.0.0 ==
 
 This is the 1.0 release.
